# g-rag-enhanced-portfolio-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/: .data_hash.json  gdelt_events.json  sec_filings.json
docs/: walkthrough.md
src/: agent.py  app.py  config.py  data_generator.py  database.py  indexer.py  logger.py  sqlite_store.py  tracing.py  vector_store.py
static/: index.html
tests/: evaluation_results.md  test_ragas.py
