[project]
name = "base-fin-graph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "langchain-community>=0.4.2",
    "langchain-google-vertexai>=3.2.4",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "ragas==0.2.14",
    "tabulate>=0.10.0",
]
